# fpga-slow-control

./: README.md
bram/: CMakeLists.txt  arguments_validator.h  base64.c  base64.h  bram.c  bram.conf  bram.h
bram-controller/: CMakeLists.txt  bram_controller.cpp  build_bram.sh  build_test.sh  program_settings.h.in
bram-controller/commands/: command_factory.hpp
bram-controller/commands/read/: read_command_application.hpp  read_command_factory.hpp  read_command_verbose.hpp
bram-controller/commands/write/: write_command.hpp  write_command_factory.hpp
bram-controller/main/: CMakeLists.txt  bram_controller.cpp
bram-controller/main/base64/: base_64.cpp  base_64.hpp
bram-controller/main/commands/: command_factory.cpp  command_factory.hpp  error_code.hpp  program_command.hpp
bram-controller/main/commands/clear/: clear_command.hpp  clear_command_factory.hpp  clear_slient_command.hpp  clear_verbose_command.hpp
bram-controller/main/commands/help/: help_silent_command.hpp  help_verbose_command.hpp
bram-controller/main/commands/read/: performance_check_read_command.hpp  read_command.hpp  read_command_factory.hpp  read_program_memory_command.hpp  read_silent_command.hpp  read_verbose_command.hpp
bram-controller/main/commands/verbose/: verbose_argument_reader.cpp  verbose_argument_reader.hpp
bram-controller/main/commands/write/: write_command.hpp  write_command_factory.hpp  write_program_memory_command.hpp  write_silent_command.hpp  write_silent_memcpy_command.hpp  write_silent_memcpy_custom_command.hpp  write_verbose_command.hpp
bram-controller/main/exceptions/: memory_exception.hpp
bram-controller/main/utils/: configuration_loader.h  hex_argument_reader.hpp  memcpy_custom.c  memcpy_custom.h
bram-controller/performance/: CMakeLists.txt  configuration_loader.h  performance_test  performance_test.cpp  performance_test_master  performance_test_memcpy  test-configuration.cfg  test_configuration.h  test_statistics.hpp
bram-controller/performance/tests/: processor_read_test.hpp  processor_read_write_test.hpp  processor_write_test.hpp  read_test.hpp  read_write_test.hpp  write_memcpy_custom_test.hpp  write_memcpy_test.hpp  write_test.hpp
bram-controller/test/: CMakeLists.txt  base_64_test.cpp  base_64_test.hpp  program_command_factory_test.cpp  program_command_factory_test.hpp
bram/properties_parser/: properties_parser.c  properties_parser.h
led-blinking/: led-blinking.c
logs/: 0943.cfg  1115.cfg  1142_config.cfg  1152.cfg  1154.cfg  1329.cfg  1337.cfg  1346.cfg
rest-api/: bram.py  bram_resource.py  configuration_resource.py  cors_interceptor.py  memory_management_resource.py  rest-api.py  server.cfg  setup.sh  system.json
rest-api/interceptors/: cors_interceptor.py
rest-api/resources/: configuration_list_resource.py  configuration_resource.py  historic_configuration_list_resource.py  historic_configuration_resource.py  historic_data_resource.py  memory_management_resource.py
rest-api/services/: configuration_cache.py  configuration_service.py  file_name_service.py  historic_data_file_writer.py  historic_data_gatherer_job.py  historic_data_service.py  memory_mock_service.py  memory_service.py
scripts/: build-bram.sh  build_all.sh  zrecv.sh  zsend.sh
web/: index.html  styles.css
web/scripts/: chart_item.js  configuration_service.js  form_controls.js  historic_configuration_service.js  input_item.js  (+8 more)
(+11 files in other folders)
