project (bram_controller)
add_executable(bram_controller bram_controller.cpp commands/read/read_command.hpp commands/read/read_command_verbose.hpp commands/read/read_command_application.hpp commands/write/write_command.hpp commands/write/write_command_verbose.hpp commands/write/write_command_application.hpp commands/command_factory.hpp commands/read/read_command_factory.hpp commands/write/write_command_factory.hpp commands/program_command.hpp)