find_package(Threads REQUIRED)
find_package(GTest REQUIRED)
include_directories("${GTEST_INCLUDE_DIRS}")
ADD_EXECUTABLE(bram_controller_test main.cpp program_command_factory_test.cpp program_command_factory_test.hpp)
target_link_libraries(bram_controller_test ${GTEST_BOTH_LIBRARIES})
target_link_libraries(bram_controller_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(bram_controller_test libfoo)
